[tool.poetry]
name = "digits"
version = "0.1.0"
description = ""
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.0"
matplotlib = "^3.7.1"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
